--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,13 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  All_users: "All users"
+  Profile: "Profile"
+  Settings: "Settings"
+  Help: "Help"
+  Sign_out: "Sign out"
+  Sign_in: "Sign in"
+  or: "or"
+  Sign_up: "Sign up"
+  Home: "Home"
+  Search: "Search"
